--- a/_example/example_ruleset.yaml
+++ b/_example/example_ruleset.yaml
@@ -6,8 +6,7 @@
 # Allowed target: command, os, fs
 name: Example ruleset
 rules:
-  - scope: output
-    category: Negative
+  - category: Negative
     instruction: |
       depth = command_util.get_ast_depth()
       assert(
@@ -23,8 +22,7 @@ rules:
 
       Naming all build stages in a multi-stage container build is a best practice for maintainability and clarity. Unnamed stages can make it difficult to reference the correct stage in `COPY --from=...` instructions or to understand the purpose of each stage in complex builds. Named stages also improve debugging and help new developers understand the Dockerfile's structure more easily. Without names, refactoring or optimizing the build process becomes error-prone and harder to automate.
 
-  - scope: output
-    category: Negative
+  - category: Negative
     instruction: |
       layer_count = fs_util.get_layer_count()
       assert(fs_util.look_for_file("/etc/apt/sources.list.d/debian.sources") == -1)
@@ -39,8 +37,7 @@ rules:
 
       Leaving APT source files in production containers can unintentionally expose internal mirrors or allow unexpected package installations. These files are typically only needed during the build process to install packages. Removing them ensures that the final image has a smaller attack surface and prevents the possibility of unauthorized or accidental package updates post-deployment. This also contributes to achieving minimal, immutable images that align with security and compliance best practices.
 
-  - scope: output
-    category: Negative
+  - category: Negative
     instruction: |
       assert(os_util.exec_command("whoami") != "root")
     description: Final user should not be root
