--- a/testdata/verify_ruleset.yaml
+++ b/testdata/verify_ruleset.yaml
@@ -5,16 +5,14 @@
 # Allowed target: command, os, fs
 name: Verification ruleset
 rules:
-  - scope: output
-    category: Negative
+  - category: Negative
     instruction: |
       assert(command_util.name() == "command_util")
     description: Ensure the command util import works properly
     id: validate command lib
     target: command
 
-  - scope: output
-    category: Negative
+  - category: Negative
     instruction: |
       assert(command_util.name() == "command_util")
       assert(fs_util.name() == "fs_util")
@@ -22,8 +20,7 @@ rules:
     id: validate fs lib
     target: fs
 
-  - scope: output
-    category: Negative
+  - category: Negative
     instruction: |
       assert(os_util.name() == "os_util")
       assert(fs_util.name() == "fs_util")
