chore(repo): update verify logic

--- a/testdata/verify_ruleset.yaml
+++ b/testdata/verify_ruleset.yaml
@@ -4,6 +4,8 @@
 # Allowed categories: negative, positived
 # Allowed target: command, os, fs
 name: Verification ruleset
+include:
+  - https://github.com/coffeemakingtoaster/whale-watcher-target.git!example_ruleset.yaml # include remote...that also includes an include
 rules:
   - category: Negative
     instruction: |
